--- a/source/20170608_Hamburg_at_work-Manifest.html.haml
+++ b/source/20170608_Hamburg_at_work-Manifest.html.haml
@@ -181,7 +181,7 @@ layout: slide_light
   \## Grundlagen bei der Datenmodellierung beachten
 
 %section{"data-markdown" => ""}
-  \## Tools nutzen um Sicherheitslücken zu erkennen
+  \## Tools nutzen, um Sicherheitslücken zu erkennen
 
 %section{"data-markdown" => ""}
   \## "Haben ist besser als brauchen..."
@@ -193,26 +193,3 @@ layout: slide_light
   <img src="/images/lionizers.png" border: "0" width="65%" />
   %br
   %h4 Msc. Dipl. Ing. Nils Löwe
-
-
-  -#
-  -# Ein paar Worte über mich
-  -# Diplom Technische Informatik, Master E-Technik
-  -# Projekte für Airbus, Audi, Dräger
-  -# Startup Erfahrung und Web-Erfahrung (WLW)
-  -# Ein paar Worte über Lionizers
-  -# Gegründet 2016
-  -# Schwerpunkt IoT Entwicklung -> Die Grenze zwischen smarten Dingen und Webanwendungen überwinden
-  -# 3 Leute, davon Mohamad demnächst als Azubi
-  -# Starke Partner in Hamburg
-  -# Call-to-Action
-  -# Wir können Softwareprojekte umsetzen
-  -# Wir können Projekte auch im Hinblick auf Ethik und Risiken begleiten (Beratung)
-  -# CTA: Wer mal ein Problem in der Richtung hat darf sich gern bei uns melden :)
-
-%section{"data-markdown" => ""}
-  \### Thank you!
-
-  @NilsLoewe
-  %br
-  \#### http://manifesto.responsiblesoftware.org/
