--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -10,6 +10,9 @@ title: Slides / Nils Löwe
       %th Slides
   %tbody
     %tr
+      %td 18.03.21
+      %td=link_to '"Nachhaltige Softwareentwicklung: Wie geht das?": TWENTY2X 2021', '20210318_Twenty2X.html'
+    %tr
       %td 07.06.17
       %td=link_to '"Verantwortung als Softwareentwickler": Vortrag für Hamburg@work', '20170608_Hamburg_at_work-Manifest.html'
     %tr
