--- a/source/layouts/slide_light.haml
+++ b/source/layouts/slide_light.haml
@@ -33,7 +33,7 @@
     .reveal
       .slides
         = yield
-        = partial :slide_footer
+        -# = partial :slide_footer
     %script{:src => "lib/js/head.min.js"}
     %script{:src => "js/reveal.js"}
     :javascript
